Ajout des classes de bases

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=PowerBroadcast
+application.vendor=zombini
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,10 +27,17 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/PowerBroadcast.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.EssentialsGroupManager.jar=/home/zombini/T\u00e9l\u00e9chargements/EssentialsGroupManager.jar
+file.reference.spigot.jar=/home/zombini/T\u00e9l\u00e9chargements/spigot.jar
+file.reference.Vault.jar=/home/zombini/T\u00e9l\u00e9chargements/Vault.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.spigot.jar}:\
+    ${file.reference.Vault.jar}:\
+    ${file.reference.EssentialsGroupManager.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -53,7 +61,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=powerbroadcast.PowerBroadcast
+main.class=me.zezombini.powerbroadcast.PowerBroadcast
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
